# pyproject-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
config/: dummy.toml
src/py_project/: __main__.py  cli.py
src/py_project/config/: __init__.py  base_config.py  experiment_config.py
src/pyproject/: __main__.py
src/pyproject/cli/: __init__.py
tests/: conftest.py  test_dummy.py
tests/config/: test_base_config.py
