[tool.poetry]
name        = "py_project"
version     = "0.1.0"
description = "Template for Python projects."
authors     = ["Tho Nguyen <122591009+naiwaaa@users.noreply.github.com>"]
license     = "MIT"
readme      = "README.md"
packages    = [{ include = "py_project", from = "src" }]
homepage    = "https://github.com/naiwaaa/pyproject-template"
repository  = "https://github.com/naiwaaa/pyproject-template"

[tool.poetry.dependencies]
python = "^3.10,<3.11"

numpy        = "^1.24.3"
matplotlib   = "^3.7.1"
scikit-learn = "^1.2.2"
scipy        = "^1.10.1"
pandas       = "^2.0.1"
pillow       = "^9.5.0"

torch       = "^2.0.0"
torchvision = "^0.15.1"

graphviz = "^0.20.1"
pydot    = "^1.4.2"
wandb    = "^0.14.2"

tomli    = "^2.0.1"
pyaml    = "^21.10.1"
pydantic = { extras = ["dotenv"], version = "^1.10.7" }
rich     = { extras = ["jupyter"], version = "^13.3.5" }

[tool.poetry.group.dev.dependencies]
pdoc = "^13.1.1"

black                = "^23.3.0"
isort                = "^5.12.0"
ruff                 = "^0.0.264"
flake8               = "^6.0.0"
flake8-aaa           = "^0.14.1"
flake8-type-checking = "^2.4.0"
darglint             = "^1.8.1"
pylint               = "^2.17.3"

pyupgrade  = "^3.3.2"
pre-commit = "^3.3.1"
safety     = "^2.3.5"

jupyterlab = "^3.6.3"
jupytext   = "^1.14.5"

[tool.poetry.group.test.dependencies]
pytest           = "^7.3.1"
pytest-cov       = "^4.0.0"
pytest-mock      = "^3.10.0"
pytest-xdist     = { extras = ["psutil"], version = "^3.2.1" }
pytest-clarity   = "^1.0.1"
pytest-randomly  = "^3.12.0"
pytest-benchmark = "^4.0.0"
hypothesis       = { extras = ["numpy"], version = "^6.75.1" }

[tool.poetry.group.typing.dependencies]
mypy         = "^1.2.0"
types-pyyaml = "^6.0.12.9"
types-pillow = "^9.5.0.2"

[tool.poetry.scripts]
pyp = "py_project:cli.main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length    = 90
target-version = ["py310"]

[tool.isort]
extend_skip_glob = [".cache/*"]
profile = "black"
sections = [
  "FUTURE",
  "TYPING",
  "STDLIB",
  "TEST",
  "THIRDPARTY",
  "DL",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
known_typing = ["typing", "types", "typing_extensions"]
known_test = ["pytest", "pytest_mock", "numpy.testing", "hypothesis"]
known_dl = ["torch", "torchvision"]
known_first_party = ["py_project"]
length_sort = true
lines_after_imports = 2
group_by_package = true
src_paths = ["src", "tests"]

[tool.ruff]
cache-dir = ".cache/ruff"
fix = true
format = "grouped"
line-length = 90
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # mccabe
  "C90",
  # pep8-naming
  "N",
  # pydocstyle
  "D",
  # pyupgrade
  "UP",
  # flake8-annotations
  "ANN",
  # flake8-bandit
  "S",
  # flake8-blind-except
  "BLE",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-commas
  "COM",
  # flake8-comprehensions
  "C4",
  # flake8-datetimez
  "DTZ",
  # flake8-debugger
  "T10",
  # flake8-errmsg
  "EM",
  # flake8-executable
  "EXE",
  # flake8-implicit-str-concat
  "ISC",
  # flake8-import-conventions
  "ICN",
  # flake8-logging-format
  "G",
  # flake8-no-pep420
  "INP",
  # flake8-pie
  "PIE",
  # flake8-print
  "T20",
  # flake8-pyi
  "PYI",
  # flake8-pytest-style
  "PT",
  # flake8-quotes
  "Q",
  # flake8-raise
  "RSE",
  # flake8-return
  "RET",
  # flake8-self
  "SLF",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # flake8-type-checking
  # "TCH",
  # flake8-unused-arguments
  "ARG",
  # flake8-use-pathlib
  "PTH",
  # eradicate
  "ERA",
  # pandas-vet
  "PD",
  # pygrep-hooks
  "PGH",
  # tryceratops
  "TRY",
  # NumPy-specific rules
  "NPY",
  # Ruff-specific rules
  "RUF",
]
ignore = [
  # Missing docstring in public module
  "D100",
  # Missing docstring in public class
  "D101",
  # Missing docstring in public method
  "D102",
  # Missing docstring in public function
  "D103",
  # Missing docstring in public package
  "D104",
  # Missing docstring in public nested class
  "D106",
  # Missing docstring in `__init__`
  "D107",
  # Lowercase imported as non-lowercase `F`
  "N812",
  # Missing type self
  "ANN101",
]
src = ["src"]
target-version = "py310"
typing-modules = ["typing", "typing_extensions", "numpy.typing"]
unfixable = ["I"]

[tool.ruff.per-file-ignores]
"test_*" = ["S101", "INP001"]

[tool.ruff.mccabe]
max-complexity = 6

[tool.ruff.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.ruff.pycodestyle]
max-doc-length = 90

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pylint.main]
extension-pkg-whitelist = ["pydantic"]
jobs                    = 0

[tool.pylint.basic]
class-attribute-naming-style = "snake_case"
good-names                   = ["x", "y", "i", "j", "k", "ex", "Run", "_"]

[tool.pylint.design]
max-args    = 5
max-parents = 7

[tool.pylint.format]
max-line-length = 90

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
  "missing-class-docstring",
]

[tool.pylint.similarities]
min-similarity-lines = 6

[tool.pylint.typecheck]
generated-members = ["numpy.*", "torch.*"]

[tool.pylint.variables]
init-import = true

[tool.mypy]
mypy_path      = "src"
python_version = "3.10"
exclude        = [".cache/", ".venv/"]

# disallow dynamic typing
disallow_any_explicit = false
disallow_any_generics = true

# untyped definitions and calls
disallow_untyped_calls      = true
disallow_untyped_defs       = true
disallow_incomplete_defs    = true
check_untyped_defs          = true
disallow_untyped_decorators = true

# none and optional handling
implicit_optional = false
strict_optional   = true

# configuring warnings
warn_redundant_casts = true
warn_unused_ignores  = true
warn_no_return       = true
warn_return_any      = true
warn_unreachable     = true

# miscellaneous strictness flags
allow_redefinition = false
implicit_reexport  = false
strict_equality    = true
strict             = true

# configuring error messages
show_error_context  = true
show_column_numbers = true
show_error_codes    = true

# incremental mode
cache_dir = ".cache/mypy"

# advanced options
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]

# miscellaneous
warn_unused_configs = true

[[tool.mypy.overrides]]
module                 = ["matplotlib.*", "sklearn.*", "plotly.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra             = true
init_typed                    = true
warn_required_dynamic_aliases = true
warn_untyped_fields           = true

[tool.pytest.ini_options]
addopts = [
  # reporting
  "--durations=5",
  "-vv",
  "-ra",
  "--showlocals",
  "--exitfirst",
  "--last-failed",
  "--color=yes",
  # warnings
  "--strict-config",
  "--strict-markers",
  # collection
  "--ignore-glob=**/fixtures/*",
  "--import-mode=importlib",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  # pytest-cov
  "--cov=src",
  "--cov-report=term-missing:skip-covered",
  "--cov-config=pyproject.toml",
  # pytest-xdist
  "--numprocesses=auto",
  # pytest-clarity
  "--diff-symbols",
  # pytest-benchmark
  "--benchmark-disable-gc",
  "--benchmark-storage=file://./.cache/benchmarks",
  # hypothesis
  "--hypothesis-show-statistics",
  "--hypothesis-explain",
]
cache_dir = ".cache/pytest"
doctest_optionflags = "NUMBER IGNORE_EXCEPTION_DETAIL"
markers = ["slow: mark tests as slow"]
testpaths = ["src", "tests"]
xfail_strict = true

[tool.coverage.run]
branch         = true
data_file      = ".cache/coverage"
omit           = ["**/test_*"]
relative_files = true

[tool.coverage.report]
show_missing  = true
skip_covered  = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
fail_under    = 70
omit          = []
