
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproject"
dynamic = ["version"]
description = "Template for Python projects."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE.md" }
authors = [{ name = "Tho Nguyen", email = "contact@naiwaaa.simplelogin.com" }]
dependencies = [
  "numpy>=2.1.3",
  "matplotlib>=3.9.2",
  "polars[numpy,plot,pydantic,style]>=1.12.0",
  "scipy>=1.14.1",
  "scikit-learn>=1.5.2",
  "pillow>=11.0.0",
  "scikit-image>=0.24.0",
  #
  "torch>=2.5.1",
  "torchaudio>=2.5.1",
  "torchvision>=0.20.1",
  #
  "graphviz>=0.20.3",
  "pydot>=3.0.2",
  "wandb>=0.18.6",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "cloudpickle>=3.1.0",
  "rich[jupyter]>=13.9.4",
]

[project.urls]
Homepage = "https://sr.ht/~naiwaaa/pyproject-template"
Repository = "https://sr.ht/~naiwaaa/pyproject-template"

[project.scripts]
cli = "pyproject.cli:main"

[tool.hatch.version]
path = "src/pyproject/__init__.py"

[dependency-groups]
dev = [
  "pdoc>=15.0.0",
  "pre-commit>=4.0.1",
  #
  "jupyterlab>=4.3.0",
  "jupytext>=1.16.4",
  #
  "ruff>=0.7.3",
  "pylint>=3.3.1",
  "mypy>=1.13.0",
  #
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.1",
  "pytest-memray>=1.7.0",
  "pytest-clarity>=1.0.1",
  "pytest-randomly>=3.16.0",
  "pytest-instafail>=0.5.0",
  "pytest-benchmark>=5.1.0",
  "hypothesis>=6.118.0",
  #
  "types-pillow>=10.2.0.20240822",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.12"
exclude = [".cache/", ".venv/"]
# disallow dynamic typing
disallow_any_explicit = true
disallow_any_generics = true
# untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# none and optional handling
implicit_optional = false
strict_optional = true
# configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
# miscellaneous strictness flags
allow_redefinition = false
enable_error_code = [
  "redundant-self",
  "redundant-expr",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
  "ignore-without-code",
  "unused-ignore",
  "narrowed-type-not-subtype",
]
implicit_reexport = false
strict_concatenate = true
strict_equality = true
strict = true
# configuring error messages
show_error_context = true
show_column_numbers = true
hide_error_codes = false
# incremental mode
cache_dir = ".cache/mypy"
# advanced options
plugins = ["numpy.typing.mypy_plugin", "pydantic.mypy"]
# miscellaneous
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "sklearn.*", "plotly.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
  # general
  "--exitfirst",
  "-vv",
  "--failed-first",
  # reporting
  "--durations=5",
  "-ra",
  "--showlocals",
  # warnings
  "--strict-config",
  "--strict-markers",
  # collection
  # "--ignore-glob=**/fixtures/*",
  "--import-mode=importlib",
  "--doctest-modules",
  "--doctest-continue-on-failure",
  # pytest-cov
  "--cov",
  "--cov-report=term-missing:skip-covered",
  "--cov-config=pyproject.toml",
  # pytest-xdist
  "--numprocesses=auto",
  # pytest-memray
  "--memray",
  "--most-allocations=5",
  # pytest-clarity
  "--diff-symbols",
  # pytest-instafail
  "--instafail",
  # pytest-benchmark
  "--benchmark-warmup=on",
  "--benchmark-columns=min,mean,stddev,outliers,rounds,iterations",
  "--benchmark-sort=mean",
  "--benchmark-disable-gc",
  "--benchmark-storage=file://./.cache/benchmarks",
  "--benchmark-disable",
  # hypothesis
  "--hypothesis-show-statistics",
  "--hypothesis-explain",
]
cache_dir = ".cache/pytest"
doctest_optionflags = "NUMBER IGNORE_EXCEPTION_DETAIL"
markers = ["slow: mark tests as slow"]
testpaths = ["src", "tests"]
verbosity_assertions = 2
xfail_strict = true

[tool.coverage.run]
source = ["src"]
branch = true
data_file = ".cache/coverage"
relative_files = true

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
exclude_lines = [
  "no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
